--- a/final.in
+++ b/final.in
@@ -1,6 +1,8 @@
 #!/bin/bash
 # Bootstrapping script run during the final stage of bootstrapping
 
+nproc=$1
+
 debconf-set-selections /debconf.set
 rm -f /debconf.set
 
@@ -15,13 +17,28 @@ mkdir -p /lib/modules/3.1.9+
 touch /boot/start.elf
 
 rpi-update
-echo \"root:gnssrpi\" | chpasswd
 
 sed -i -e 's/KERNEL\!=\"eth\*|/KERNEL\!=\"/' /lib/udev/rules.d/75-persistent-net-generator.rules
 
-apt-get install -y gnuradio-dev gfortran
-./compilation
+# Set up GNSS-SDR
+gnss_sdr_dir="/var/gnss-sdr"
+./compilation "${gnss_sdr_dir}" ${nproc}
 
+# Set up a GNSS-SDR user
+useradd gnss -d /home/gnss
+echo "gnss:gnss" | chpasswd
+echo "export PATH=$PATH:${gnss_sdr_dir}" >> /home/gnss/.bashrc
+
+# Install supervisor
+rlt_config="${gnss_sdr_dir}/conf/gnss-sdr_GPS_L1_rtlsdr_realtime.conf"
+apt-get install -y supervisor
+echo "[program:gnss]" >> /etc/supervisor/supervisord.conf
+echo "command=gnss-sdr --config_file=${rlt_config} --log_dir=/home/gnss" >> /etc/supervisor/supervisord.conf
+echo "startsecs=10" >> /etc/supervisor/supervisord.conf
+echo "user=gnss" >> /etc/supervisor/supervisord.conf
+echo "directory=/home/gnss" >> /etc/supervisor/supervisord.conf
+echo "stderr_logfile=/home/gnss/gnss_error.log" >> /etc/supervisor/supervisord.conf
+echo "stdout_logfile=/home/gnss/gnss_output.log" >> /etc/supervisor/supervisord.conf
 
 rm -f /etc/udev/rules.d/70-persistent-net.rules
 rm -f final
