--- a/bootstrap.in
+++ b/bootstrap.in
@@ -10,7 +10,6 @@ boot_dev=$3
 release=$4
 mirror=$5
 
-
 echo "Bootstrapping Raspbian ${release} into ${root_dir}"
 echo "Boot device is ${boot_dev}"
 cd "${root_dir}"
@@ -59,7 +58,7 @@ cp "${script_dir}/final" final
 chmod +x compilation final
 
 echo "Final bootstrap stage"
-LANG=C @CHROOT@ "${root_dir}" /final
+LANG=C @CHROOT@ "${root_dir}" /final "$( nproc )"
 
 echo "Cleaning up"
 cp "${script_dir}/cleanup" cleanup
