--- a/compilation.in
+++ b/compilation.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 # Bootstrap file, run during the final stage of bootstrapping
 
-mkdir "/rpi-build"
+mkdir -p "/rpi-build"
 
 
 # Where gnss-sdr will live
@@ -16,8 +16,10 @@ gnss_sdr_repo="git://git.code.sf.net/p/gnss-sdr/cttc"
 git clone --depth 1 ${gnss_sdr_repo} ${gnss_sdr_src}
 
 cd "/rpi-build"
-wget http://googletest.googlecode.com/files/gtest-1.7.0.zip
-unzip gtest-1.7.0.zip
+if [ ! -d gtest-1.7.0 ]; then
+    wget http://googletest.googlecode.com/files/gtest-1.7.0.zip
+    unzip gtest-1.7.0.zip
+fi
 cd gtest-1.7.0
 ./configure
 make -j${procs}
@@ -29,12 +31,21 @@ compile ()
 mkdir -p "$1/build"
 cd "$1/build"
 
+replaced="NewCMakeLists.txt"
+sed \
+   's/\-march\=native \-mfpmath\=sse/-march=armv6 -mfloat-abi=hard -mfpu=vfp/' \
+   "../CMakeLists.txt" > "${replaced}"
+
+cp "$1/CMakeLists.txt" "$1/CMakeLists.txt.bak"
+mv "${replaced}" "$1/CMakeLists.txt"
+
+
 # gnss-sdr not always up to date :)
 gfpath="/usr/lib/gcc/arm-linux-gnueabihf/4.9"
 
 LIB="$LIB:${gfpath}" cmake \
     -DENABLE_RTLSDR=ON \
-    -DENABLE_GENERIC_ARCH=ON \
+    -DENABLE_GENERIC_ARCH=OFF \
     ../
 
 make -j${procs}
