--- a/compilation.in
+++ b/compilation.in
@@ -55,8 +55,9 @@ cd /
 }
 
 # Make doubly sure packages are available
-apt-get install -y libssl-dev libboost-all-dev libuhd-dev libosmosdr-dev gnuradio gnuradio-dev gr-osmosdr wicd-curses \
-    libusb-dev libusb-1.0-0-dev gfortran libopenblas-dev liblapack-dev libarmadillo-dev
+apt-get install -y libssl-dev libboost-all-dev libuhd-dev libosmosdr-dev \
+    gnuradio gnuradio-dev gr-osmosdr wicd-curses libusb-dev libusb-1.0-0-dev \
+    gfortran libopenblas-dev liblapack-dev libarmadillo-dev liblog4cpp5-dev
 
 # Compile and install gnss-sdr
 
