--- a/bootstrap.in
+++ b/bootstrap.in
@@ -9,6 +9,8 @@ boot_dir=$2
 boot_dev=$3
 release=$4
 mirror=$5
+repo=$6
+branch=$7
 
 echo "Bootstrapping Raspbian ${release} into ${root_dir}"
 echo "Boot device is ${boot_dev}"
@@ -58,7 +60,7 @@ cp "${script_dir}/final" final
 chmod +x compilation final
 
 echo "Final bootstrap stage"
-LANG=C @CHROOT@ "${root_dir}" /final "$( nproc )"
+LANG=C @CHROOT@ "${root_dir}" /final "$( nproc )" "${repo}" "${branch}"
 
 echo "Cleaning up"
 cp "${script_dir}/cleanup" cleanup
