--- a/compilation.in
+++ b/compilation.in
@@ -14,6 +14,7 @@ gnss_sdr_branch="$3"
 procs=$4
 
 # Build and install replacement volk
+apt-get install -y gnuradio-dev python-cheetah libboost-all-dev
 git init gnuradio
 cd gnuradio
 git config core.sparsecheckout true
