--- a/final.in
+++ b/final.in
@@ -27,17 +27,15 @@ gnss_sdr_dir="/var/gnss-sdr"
 ./compilation "${gnss_sdr_dir}" "${gnss_repo}" "${gnss_branch}" ${nproc}
 
 # Set up a GNSS-SDR user
-useradd gnss -d /home/gnss
+useradd -m -d /home/gnss -s /bin/bash gnss
 echo "gnss:gnss" | chpasswd
-mkdir -p /home/gnss
-touch /home/gnss/.bashrc
-echo "export PATH=\$PATH:${gnss_sdr_dir}" >> /home/gnss/.bashrc
+chown gnss:gnss /home/gnss
 
 # Install supervisor
-rlt_config="${gnss_sdr_dir}/conf/gnss-sdr_GPS_L1_rtlsdr_realtime.conf"
+rtl_config="${gnss_sdr_dir}/conf/gnss-sdr_GPS_L1_rtlsdr_realtime.conf"
 apt-get install -y supervisor
 echo "[program:gnss]" >> /etc/supervisor/supervisord.conf
-echo "command=gnss-sdr --config_file=${rlt_config} --log_dir=/home/gnss
+echo "command=${gnss_sdr_dir}/install/gnss-sdr --config_file=${rtl_config} --log_dir=/home/gnss
 " >> /etc/supervisor/supervisord.conf
 echo "startsecs=10" >> /etc/supervisor/supervisord.conf
 echo "user=gnss" >> /etc/supervisor/supervisord.conf
