--- a/bootstrap.in
+++ b/bootstrap.in
@@ -68,6 +68,10 @@ cp "${script_dir}/cleanup" cleanup
 chmod +x cleanup
 LANG=C @CHROOT@ "${root_dir}" /cleanup
 
+# Place startup script for first run
+echo "apt-get install && rm -f /etc/init.d/rpi-startup
+" > etc/init.d/rpi-startup
+chmod +x etc/init.d/rpi-startup
 
 #Unmount
 sleep 1
