Running e2fsck before resizing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,13 @@ required_program(RESIZE2FS
   "Program for resizing ext4 filesystems")
 
 ###############################################################################
+# resize2fs
+###############################################################################
+required_program(E2FSCK
+  e2fsck
+  "Program for checking ext4 filesystems")
+
+###############################################################################
 # Configure the gnss-rpi scripts
 ###############################################################################
 
