--- a/compilation.in
+++ b/compilation.in
@@ -10,8 +10,14 @@ gnss_sdr_repo="$2"
 # What is the gnss-sdr branch?
 gnss_sdr_branch="$3"
 
+# What is the gnuradio repository
+gr_repo="$4"
+
+#What is the gnuradio branch
+gr_branch="$5"
+
 # How many cores on the host machine
-procs=$4
+procs=$6
 
 # Build and install replacement volk
 apt-get install -y gnuradio-dev python-cheetah libboost-all-dev
@@ -19,13 +25,14 @@ git init gnuradio
 cd gnuradio
 git config core.sparsecheckout true
 echo "volk" >> .git/info/sparse-checkout
-git remote add -f origin https://github.com/gnuradio/gnuradio
-git pull --depth=1 origin master
+git remote add -f origin ${gr_repo}
+git pull --depth=1 origin "${gr_branch}"
+git checkout "${gr_branch}"
 mkdir volk/build
 cd volk/build
 cmake -DCMAKE_INSTALL_PREFIX=/usr/lib/arm-linux-gnueabihf \
     -Dhave_mfpu_neon=0 \
-    -DHAVE_POSIX_MEMALIGN=0 \
+    -DDISABLE_POSIX_MEMALIGN=1 \
     -DCMAKE_CXX_FLAGS:STRING="-march=armv6 -mfpu=vfp -mfloat-abi=hard" \
     -DCMAKE_C_FLAGS:STRING="-march=armv6 -mfpu=vfp -mfloat-abi=hard" \
     ../
